# esp32-dns

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
blocklist/: Makefile  compile_commands.json  main
blocklist/include/: llist.h
blocklist/src/: list.c  main.c
components/dns/: CMakeLists.txt  dns.c  dns_log_questions.c  dns_ntoh_header.c  dns_parse_question.c  dns_read_labels.c
components/dns/include/: dns.h
components/dns/log/: dns_log_header.c  dns_log_packet.c  dns_log_question.c
components/pstring/: CMakeLists.txt  pstr8_cat.c  pstr8_join.c  pstr8_rev.c
components/pstring/include/: pstring.h
main/: CMakeLists.txt  dns.c  dns.h  dns_protocol.c  dns_protocol.h  index.html  tcp_server.c
main/include/: dns.h  dns_server.h  handler.h  index.h  llist.h  pstring.h  server.h  trie.h  web_server.h
main/src/: dns.c  handler.c  list.c  main.c  pstring.c  server.c  tcp_server.c  trie.c
main/src/dns/: dns.c  dns_read_labels.c
main/src/dns_server/: handler.c  server.c
main/src/pstring/: pstr8_cat.c  pstr8_join.c  pstr8_len.c
main/src/trie/: trie.c
main/src/web_server/: get_index.c  post_index.c  server.c
